--- a/Simulation_of_anorexia_antibiotic_resistance_models.Rmd
+++ b/Simulation_of_anorexia_antibiotic_resistance_models.Rmd
@@ -72,7 +72,7 @@ stochastic_strain_competition <- function(tmax, tstep, pars, y0, seed) {
   sim[1,2:4] <- c(R,P1,P2)
   
   ## start the algorithm
-  while (t < tmax) {
+  while (t < tmax & (P1+P2) > 0) {
     ## compute rates
     rates <- c(theta, ## add resource = 1
                chi*R, ## host resource use = 2
@@ -108,28 +108,11 @@ stochastic_strain_competition <- function(tmax, tstep, pars, y0, seed) {
     else if (event==7) P1 <- P1 - 1
     else if (event==8) P2 <- P2 - 1
     else if (event==9) { P1 <- P1 -1; P2 <- P2 + 1}
-    else {P1 <- P1 + 1; P2 <- P2 + 1}
+    else {P1 <- P1 + 1; P2 <- P2 - 1}
       
   }
   return(sim)
 }
-
-## choose parameters appropriately so that strain 1 can persist and outcompete strain 2
-pars <- c(theta=10, chi=0.1, alpha1=1, alpha2=0.9, eta1=1000, eta2=1000, epsilon1=20, epsilon2=20, delta1=1, delta2=1, mu=0.01)
-## resource abundance in the absence of parasites
-pars["theta"]/pars["chi"]
-## resource abundance with strain 1
-R1 <- pars["eta1"]*pars["delta1"]/(pars["epsilon1"]*pars["alpha1"]-pars["delta1"])
-R1
-## strain 1 outcompetes strain 2 if this is smaller than the above
-R2 <- pars["eta2"]*pars["delta2"]/(pars["epsilon2"]*pars["alpha2"]-pars["delta2"])
-R2
-## strain 1 abundance at equilibrium in the absence of mutation
--(((pars["eta1"] + R1)*(pars["chi"]*R1 - pars["theta"]))/(pars["alpha1"]*R1))
-
-## This appears to be a pretty good set of parameters
-## Set the initial conditions
-y0 <- c(R = 100, P1 = 10, P2 = 0)
 
 ## Deterministic version of the model
 deterministic_strain_competition <- function(t, y0, pars) {
@@ -153,7 +136,7 @@ deterministic_strain_competition <- function(t, y0, pars) {
   d <- pars["d"]
   ds <- pars["ds"]
   
-  dRdt <- theta - chi*R - alpha1*R/(eta1+R)*P1 - alpha1*R/(eta1+R)*P1
+  dRdt <- theta - chi*R - alpha1*R/(eta1+R)*P1 - alpha1*R/(eta1+R)*P2
   dP1dt <- epsilon1*alpha1*R/(eta1+R)*P1 - delta1*P1 - mu*P1 + mu*P2
   dP2dt <- epsilon2*alpha2*R/(eta2+R)*P2 - delta2*P2 - mu*P2 + mu*P1
   
@@ -161,22 +144,40 @@ deterministic_strain_competition <- function(t, y0, pars) {
 }
 
 library(deSolve)
+library(parallel)
+library(magrittr)
+
 det_sim <- ode(y = y0, times=seq(0,100,0.1), func=deterministic_strain_competition, parms=pars)
+
+```
+
+```{r fig1, fig.height=4, fig.width=6, fig.cap="Dynamics of resources and each pathogen strain when resource competition is fairly similar between the two strains. For this set of parameters, the strain 1-only resource equilibrium is 52.6, and the strain 2-only resoure equilibrim is 58.8. In the absence of parasites, the equilibrium is 100. The mutation rate is fairly high, 0.01."}
+
+## choose parameters appropriately so that strain 1 can persist and outcompete strain 2
+pars <- c(theta=10, chi=0.1, alpha1=1, alpha2=0.9, eta1=1000, eta2=1000, epsilon1=20, epsilon2=20, delta1=1, delta2=1, mu=0.01)
+# ## resource abundance in the absence of parasites
+# pars["theta"]/pars["chi"]
+# ## resource abundance with strain 1
+# R1 <- pars["eta1"]*pars["delta1"]/(pars["epsilon1"]*pars["alpha1"]-pars["delta1"])
+# ## strain 1 outcompetes strain 2 if this is smaller than the above
+# R2 <- pars["eta2"]*pars["delta2"]/(pars["epsilon2"]*pars["alpha2"]-pars["delta2"])
+# ## strain 1 abundance at equilibrium in the absence of mutation
+# -(((pars["eta1"] + R1)*(pars["chi"]*R1 - pars["theta"]))/(pars["alpha1"]*R1))
+
+## Set the initial conditions
+y0 <- c(R = 100, P1 = 10, P2 = 0)
 
 ## Do some stochastic simulations
 set.seed(1234)
-seeds <- floor(runif(12, 1, 1e5))
-system.time(stochastic_strain_competition(200, tstep=0.1, pars=pars, y0=y0, seed=seeds[1]))
-
-library(parallel)
+seeds <- floor(runif(24, 1, 1e5))
 mclapply(seeds,
          function(s) stochastic_strain_competition(100, tstep=0.1, pars=pars, y0=y0, seed=s),
-         mc.cores=12) -> stoch_sims
+         mc.cores=4) -> stoch_sims
 
 par(mfrow=c(1,3))
 for (j in 2:4) {
   plot.new()
-  plot.window(xlim=c(0,200), ylim=c(0, lapply(stoch_sims, function(s) max(s[,j])) %>% unlist %>% max))
+  plot.window(xlim=range(stoch_sims[[1]][,1]), ylim=c(0, lapply(stoch_sims, function(s) max(s[,j])) %>% unlist %>% max))
   axis(1); axis(2); box('plot')
   for (i in 1:length(stoch_sims)) lines(stoch_sims[[i]][,1], stoch_sims[[i]][,j], col=gray(0.5))
   lines(stoch_sims[[1]][,1], lapply(stoch_sims, function(s) s[,j]) %>% do.call(cbind.data.frame, .) %>% apply(., 1, mean), col=1, lwd=2)
@@ -185,12 +186,98 @@ for (j in 2:4) {
 
 ```
 
-## Including Plots
+```{r fig2, fig.height=4, fig.width=6, fig.cap="Dynamics of resources and each pathogen strain when resource competition is more biased towards strain 1. For this set of parameters, the strain 1-only resource equilibrium is 52.6, and the strain 2-only resoure equilibrim is 76.9. In the absence of parasites, the equilibrium is 100. The mutation rate is fairly high, 0.01. This change makes the mutant strain much rarer, as it tends to be outcompeted fairly quickly."}
 
-You can also embed plots, for example:
+## choose parameters appropriately so that strain 1 can persist and outcompete strain 2
+pars <- c(theta=10, chi=0.1, alpha1=1, alpha2=0.7, eta1=1000, eta2=1000, epsilon1=20, epsilon2=20, delta1=1, delta2=1, mu=0.01)
+# ## resource abundance in the absence of parasites
+# pars["theta"]/pars["chi"]
+# ## resource abundance with strain 1
+# R1 <- pars["eta1"]*pars["delta1"]/(pars["epsilon1"]*pars["alpha1"]-pars["delta1"])
+# ## strain 1 outcompetes strain 2 if this is smaller than the above
+# R2 <- pars["eta2"]*pars["delta2"]/(pars["epsilon2"]*pars["alpha2"]-pars["delta2"])
+# ## strain 1 abundance at equilibrium in the absence of mutation
+# -(((pars["eta1"] + R1)*(pars["chi"]*R1 - pars["theta"]))/(pars["alpha1"]*R1))
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+## Set the initial conditions
+y0 <- c(R = 100, P1 = 10, P2 = 0)
+
+## Do some stochastic simulations
+set.seed(1234)
+seeds <- floor(runif(24, 1, 1e5))
+mclapply(seeds,
+         function(s) stochastic_strain_competition(100, tstep=0.1, pars=pars, y0=y0, seed=s),
+         mc.cores=4) -> stoch_sims
+
+par(mfrow=c(1,3))
+for (j in 2:4) {
+  plot.new()
+  plot.window(xlim=range(stoch_sims[[1]][,1]), ylim=c(0, lapply(stoch_sims, function(s) max(s[,j])) %>% unlist %>% max))
+  axis(1); axis(2); box('plot')
+  for (i in 1:length(stoch_sims)) lines(stoch_sims[[i]][,1], stoch_sims[[i]][,j], col=gray(0.5))
+  lines(stoch_sims[[1]][,1], lapply(stoch_sims, function(s) s[,j]) %>% do.call(cbind.data.frame, .) %>% apply(., 1, mean), col=1, lwd=2)
+}
+
+
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r fig3, fig.height=4, fig.width=6, fig.cap="This is the same set of parameters as in the preceding simulation, except that the mutation rate is much lower, 0.001. Now the mutant essentially cannot persist."}
+
+## choose parameters appropriately so that strain 1 can persist and outcompete strain 2
+pars <- c(theta=10, chi=0.1, alpha1=1, alpha2=0.7, eta1=1000, eta2=1000, epsilon1=20, epsilon2=20, delta1=1, delta2=1, mu=0.001)
+# ## resource abundance in the absence of parasites
+# pars["theta"]/pars["chi"]
+# ## resource abundance with strain 1
+# R1 <- pars["eta1"]*pars["delta1"]/(pars["epsilon1"]*pars["alpha1"]-pars["delta1"])
+# ## strain 1 outcompetes strain 2 if this is smaller than the above
+# R2 <- pars["eta2"]*pars["delta2"]/(pars["epsilon2"]*pars["alpha2"]-pars["delta2"])
+# ## strain 1 abundance at equilibrium in the absence of mutation
+# -(((pars["eta1"] + R1)*(pars["chi"]*R1 - pars["theta"]))/(pars["alpha1"]*R1))
+
+## Set the initial conditions
+y0 <- c(R = 100, P1 = 10, P2 = 0)
+
+## Do some stochastic simulations
+set.seed(1234)
+seeds <- floor(runif(24, 1, 1e5))
+mclapply(seeds,
+         function(s) stochastic_strain_competition(100, tstep=0.1, pars=pars, y0=y0, seed=s),
+         mc.cores=4) -> stoch_sims
+
+par(mfrow=c(1,3))
+for (j in 2:4) {
+  plot.new()
+  plot.window(xlim=range(stoch_sims[[1]][,1]), ylim=c(0, lapply(stoch_sims, function(s) max(s[,j])) %>% unlist %>% max))
+  axis(1); axis(2); box('plot')
+  for (i in 1:length(stoch_sims)) lines(stoch_sims[[i]][,1], stoch_sims[[i]][,j], col=gray(0.5))
+  lines(stoch_sims[[1]][,1], lapply(stoch_sims, function(s) s[,j]) %>% do.call(cbind.data.frame, .) %>% apply(., 1, mean), col=1, lwd=2)
+}
+
+
+```
+
+How does anorexia affect these results? We can explore that by varying the value of $\theta$ and asking how that affects the abundances of both strains at equilibrium.
+
+```{r fig3, fig.height=4, fig.width=6, fig.cap=""}
+
+## Vary theta and record the mean trajectories only
+Rresults <- P1results <- P2results <- c()
+for (th in 8:12) {
+  pars <- c(theta=th, chi=0.1, alpha1=1, alpha2=0.7, eta1=1000, eta2=1000, epsilon1=20, epsilon2=20, delta1=1, delta2=1, mu=0.001)
+  set.seed(1234)
+  seeds <- floor(runif(24, 1, 1e5))
+  mclapply(seeds,
+           function(s) stochastic_strain_competition(100, tstep=0.1, pars=pars, y0=y0, seed=s),
+           mc.cores=4) -> stoch_sims
+  Rresults <- cbind(Rresults,
+                   lapply(stoch_sims, function(s) s[,2]) %>% do.call(cbind.data.frame, .) %>% apply(., 1, mean))
+  P1results <- cbind(P1results,
+                   lapply(stoch_sims, function(s) s[,3]) %>% do.call(cbind.data.frame, .) %>% apply(., 1, mean))
+  P2results <- cbind(P2results,
+                   lapply(stoch_sims, function(s) s[,4]) %>% do.call(cbind.data.frame, .) %>% apply(., 1, mean))
+  print(th)
+}
+```
+  
+Key thing to note here: increasing ingestion increases the abundance of strain 1, but not strain 2 in the absence of drugs. 
+This is the key thing to keep in mind... anorexia will reduce the likelihood of emergence by reducing the abundance of the drug-susceptible strain.
